build_error_3.log
    Checking ark-0-zheng v0.1.0 (C:\Users\Stran\.gemini\antigravity\scratch\ark-compiler-prime\core)
error: cannot find macro `json` in this scope
   --> core\src\intrinsics.rs:173:19
    |
173 |     let payload = json!({
    |                   ^^^^
    |
help: consider importing this macro
    |
  9 + use serde_json::json;
    |

error[E0433]: failed to resolve: use of undeclared type `Client`
   --> core\src\intrinsics.rs:172:18
    |
172 |     let client = Client::new();
    |                  ^^^^^^ use of undeclared type `Client`
    |
help: consider importing one of these structs
    |
  9 + use reqwest::Client;
    |
  9 + use reqwest::blocking::Client;
    |

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> core\src\intrinsics.rs:198:40
    |
198 |                     std::thread::sleep(Duration::from_secs(2u64.pow(attempt)));
    |                                        ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these structs
    |
  9 + use std::time::Duration;
    |
  9 + use tokio::time::Duration;
    |

error[E0433]: failed to resolve: use of undeclared type `Command`
   --> core\src\intrinsics.rs:234:19
    |
234 |     let mut cmd = Command::new("cmd");
    |                   ^^^^^^^ use of undeclared type `Command`
    |
help: consider importing this struct
    |
  9 + use std::process::Command;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fs`
   --> core\src\intrinsics.rs:281:5
    |
281 |     fs::write(path_str, content).map_err(|_| RuntimeError::NotExecutable)?;
    |     ^^ use of unresolved module or unlinked crate `fs`
    |
    = help: if you wanted to use a crate named `fs`, use `cargo add fs` to add it to your `Cargo.toml`
help: consider importing this module
    |
  9 + use std::fs;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `fs`
   --> core\src\intrinsics.rs:556:19
    |
556 |     let content = fs::read_to_string(path_str).map_err(|_| RuntimeError::NotExecutable)?;
    |                   ^^ use of unresolved module or unlinked crate `fs`
    |
    = help: if you wanted to use a crate named `fs`, use `cargo add fs` to add it to your `Cargo.toml`
help: consider importing this module
    |
  9 + use std::fs;
    |

error[E0433]: failed to resolve: use of undeclared type `Sha256`
   --> core\src\intrinsics.rs:574:22
    |
574 |     let mut hasher = Sha256::new();
    |                      ^^^^^^ use of undeclared type `Sha256`
    |
help: consider importing this type alias
    |
  9 + use sha2::Sha256;
    |

error[E0433]: failed to resolve: use of undeclared type `Sha256`
   --> core\src\intrinsics.rs:617:30
    |
617 |             let mut hasher = Sha256::new();
    |                              ^^^^^^ use of undeclared type `Sha256`
    |
help: consider importing this type alias
    |
  9 + use sha2::Sha256;
    |

error[E0433]: failed to resolve: use of undeclared type `Sha256`
   --> core\src\intrinsics.rs:634:30
    |
634 |             let mut hasher = Sha256::new();
    |                              ^^^^^^ use of undeclared type `Sha256`
    |
help: consider importing this type alias
    |
  9 + use sha2::Sha256;
    |

warning: unused imports: `Deserialize` and `Serialize`
 --> core\src\bytecode.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::ast::FunctionDef`
  --> core\src\runtime.rs:19:5
   |
19 | use crate::ast::FunctionDef;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unreachable pattern
   --> core\src\vm.rs:195:17
    |
195 |                 _ => return Err(format!("Unimplemented opcode: {:?}", op)),
    |                 ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> core\src\vm.rs:195:17
    |
 46 |                 OpCode::Push(v) => self.stack.push(v.clone()),
    |                 --------------- matches some of the same values
 47 |                 OpCode::Pop => {
    |                 ----------- matches some of the same values
...
 51 |                 OpCode::Add => self.binary_op(|a, b| intrinsics::intrinsic_add(vec![a, b]))?,
    |                 ----------- matches some of the same values
 52 |                 OpCode::Sub => self.binary_op(|a, b| intrinsics::intrinsic_sub(vec![a, b]))?,
    |                 ----------- matches some of the same values
...
195 |                 _ => return Err(format!("Unimplemented opcode: {:?}", op)),
    |                 ^ ...and 20 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `ark-0-zheng` (lib) generated 3 warnings
error: could not compile `ark-0-zheng` (lib) due to 9 previous errors; 3 warnings emitted
